--- a/dealers.html
+++ b/dealers.html
@@ -25,7 +25,7 @@
         <div class="dealer-card" onclick="enterDealer('Blacksmith Joey')">
           <img src="images/blacksmith-joey.png" alt="Blacksmith Joey">
           <h2>⚒️ Blacksmith Joey</h2>
-          <p>Weapons and Armor</p>
+          <p>Weapons, Armor, and Tools</p>
         </div>
       </div>
     </main>
@@ -34,7 +34,7 @@
   <script>
     function enterDealer(name){
       localStorage.setItem("currentDealer", name);
-      window.location.href="npc.html"; // now goes straight into NPC shop
+      window.location.href="npc.html"; // go into NPC shop
     }
   </script>
 </body>
