--- a/npc.html
+++ b/npc.html
@@ -9,7 +9,6 @@
 <body>
   <div class="store-page">
     <header class="store-header">
-      <!-- FIXED back button -->
       <button class="btn red" onclick="window.location.href='dealers.html'">⬅ Back to Dealers</button>
       <div class="profile-mini">
         <div class="pfp-mini"><img id="pfp" src="images/agent.png"></div>
@@ -37,6 +36,12 @@
     let player;
 
     function formatNumber(num){ return num.toLocaleString(); }
+
+    // ✅ Auto image naming like dashboard
+    function getItemIcon(itemName){
+      const fileName = itemName.toLowerCase().replace(/\s+/g,"-")+".png";
+      return "images/"+fileName;
+    }
 
     function showPopup(message,type="info",buttons=[]){
       const overlay=document.getElementById("popupOverlay"),
@@ -95,11 +100,12 @@
     function renderDealerItems(dealer){
       const container=document.getElementById("dealerItems");
       container.innerHTML="";
-      ITEMS.filter(it=>it.dealer.toLowerCase() === dealer.toLowerCase())
+      // ✅ Match items by dealer, ignore missing
+      ITEMS.filter(it => it.dealer && it.dealer.toLowerCase() === dealer.toLowerCase())
            .forEach(item=>{
         container.innerHTML+=`
           <div class="item-card">
-            <img class="item-pic" src="images/${item.icon}" alt="${item.name}" onerror="this.src='images/item.png';">
+            <img class="item-pic" src="${getItemIcon(item.name)}" alt="${item.name}" onerror="this.src='images/item.png';">
             <h3>${item.name}</h3>
             <p class="gold-text">
               ${formatNumber(item.price)} <img class="money-icon" src="images/money.png">
@@ -112,15 +118,17 @@
     function buyItem(name,price){
       if(player.money>=price){
         showPopup(`Do you want to buy ${name} for ${formatNumber(price)} money?`,"info",[
-          {text:"Confirm",class:"green",onClick:()=>{
-            player.money-=price;
-            let found=player.inventory.find(i=>i.item===name);
-            if(found) found.qty++;
-            else player.inventory.push({item:name,qty:1});
-            savePlayer();
-            document.getElementById("money").innerText=formatNumber(player.money);
-            showPopup(`You bought ${name} for ${formatNumber(price)} money!`,"success");
-          }},
+          {
+            text:"Confirm",class:"green",onClick:()=>{
+              player.money-=price;
+              let found=player.inventory.find(i=>i.item===name);
+              if(found) found.qty++;
+              else player.inventory.push({ item:name, qty:1, equipped:false }); // ✅ keep consistent
+              savePlayer();
+              document.getElementById("money").innerText=formatNumber(player.money);
+              showPopup(`You bought ${name} for ${formatNumber(price)} money!`,"success");
+            }
+          },
           {text:"Cancel",class:"red"}
         ]);
       } else {
